kubeflow/pipelines/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: workflow-controller-metrics
  namespace: kubeflow
spec:
  host: workflow-controller-metrics.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
